# esp32-riscv-bare-metal-sdk

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: sdk-utils.cmake  toolchain-esp32c6.cmake  toolchain-esp32p4.cmake
core/delay/: CMakeLists.txt
core/esp_common/: CMakeLists.txt
core/esp_hw_support/: CMakeLists.txt
core/esp_hw_support/include/: esp_cpu.h
core/esp_hw_support/include/esp_private/: periph_ctrl.h  regi2c_ctrl.h
core/esp_rom/: CMakeLists.txt
core/esp_rom/include/: esp_rom_sys.h
core/hal/: CMakeLists.txt
core/hal/esp32p4/include/hal/: efuse_ll.h  i2c_ll.h  ldo_ll.h  rmt_ll.h  sdmmc_ll.h  spi_ll.h
core/hal/include/hal/: pmu_types.h
core/hal/platform_port/include/hal/: assert.h  config.h
core/interrupts/: CMakeLists.txt
core/interrupts/esp32c6/: interrupt_plic.c  interrupts.c  interrupts.h
core/interrupts/esp32p4/: interrupt_clic.c  interrupt_clic.h  interrupts.c  interrupts.h
core/mtimer/: CMakeLists.txt
core/mtimer/esp32c6/: mtimer.c  mtimer.h
core/mtimer/esp32p4/: mtimer.c  mtimer.h
core/riscv/: CMakeLists.txt
core/riscv/include/riscv/: rv_utils.h
core/soc/: CMakeLists.txt
core/soc/esp32p4/: sdio_slave_periph.c
core/soc/esp32p4/include/soc/: soc.h
core/soc/esp32p4/register/hw_ver1/soc/: io_mux_reg.h  sdmmc_struct.h
core/soc/include/soc/: rtc_cntl_periph.h  spi_periph.h
core/startup/esp32c6/: startup.c
core/startup/esp32p4/: startup.c  startup.h
core/syscalls/: CMakeLists.txt  syscalls.c
docker/: Dockerfile
drivers/ble_nimble/: CMakeLists.txt  ble_hci_hosted.c  ble_nimble.c  ble_nimble.h  ble_nimble_console.c  ble_npl_baremetal.c  nimble_port_baremetal.c
drivers/ble_nimble/include/: bt_common.h  esp_log.h  esp_nimble_cfg.h  esp_nimble_mem.h
drivers/ble_nimble/include/console/: console.h
drivers/ble_nimble/include/nimble/: nimble_npl_os.h  nimble_port.h  os_types.h
drivers/es8311/: CMakeLists.txt  es8311.c  es8311.h
drivers/esp_hosted/: CMakeLists.txt  README.md  esp_hosted.c  esp_hosted.h  esp_hosted_ctrl.c  esp_hosted_ctrl.h  esp_hosted_sdio.c  esp_hosted_sdio.h
drivers/gpio_drv/: CMakeLists.txt
drivers/i2c_drv/: CMakeLists.txt  i2c_drv.c  i2c_drv.h
drivers/i2s_drv/: CMakeLists.txt  i2s_drv.c  i2s_drv.h
drivers/lwip_hosted/: CMakeLists.txt  lwip_hosted.c  lwip_hosted.h
drivers/lwip_hosted/port/: lwipopts.h
drivers/lwip_hosted/port/arch/: cc.h  sys_arch.h
drivers/sd_spi/: CMakeLists.txt  sd_platform.c  sd_platform.h  sd_spi.c  sd_spi.h
drivers/sdmmc/: CMakeLists.txt  sdmmc.c  sdmmc.h
drivers/spi_drv/: CMakeLists.txt  spi_drv.c  spi_drv.h
drivers/usb_serial/: CMakeLists.txt  usb_serial.c  usb_serial.h
examples/blink_ws2812/: CMakeLists.txt  build.sh  build_flash.sh  flash.sh
examples/blink_ws2812/source/: main.c
examples/blinky/: CMakeLists.txt
examples/esp_hosted/: CMakeLists.txt  build.sh
examples/esp_hosted/source/: main.c
ld/esp32p4/: esp32p4.ld
libraries/sdFat32/: CMakeLists.txt  sdFat32.c  sdFat32.h
libraries/ws2812/: CMakeLists.txt  ws2812.c
scripts/: docker-build.sh  docker-shell.sh
